# mordecai

./: .gitignore  AGENTS.md  Dockerfile  LOCAL_DEV_VIBE_KANBAN_MOUNT.md  README.md  alembic.ini  config.json  docker-compose.vibe-kanban.yml  docker-compose.yml  docker-entrypoint.sh  justfile  linkedin-post-hebrew.md  linkedin-post.md  pyproject.toml  requirements.txt  secrets.yml_example
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 20260128_141333_initial_schema.py  20260128_221313_remove_long_memory_table.py  20260129_073737_add_cron_tables.py  20260201_120000_add_user_onboarding.py  20260201_221015_initial_schema.py  20260203_235000_add_conversation_message_content_json.py  20260203_add_conversation_messages.py  20260212_134414_add_multi_agent_conversation_tables.py  20260217_120000_add_browser_cookies_table.py  20260218_120000_add_user_skill_secrets_table.py
app/: __init__.py  asgi.py  config.py  database.py  enums.py  logging_filters.py  main.py
app/dao/: __init__.py  base.py  browser_cookie_dao.py  conversation_dao.py  cron_dao.py  cron_lock_dao.py  log_dao.py  memory_dao.py  skill_secret_dao.py  task_dao.py  user_dao.py
app/models/: __init__.py  agent.py  artifacts.py  base.py  domain.py  orm.py
app/observability/: __init__.py  error_log_file.py  forbidden_access_log.py  health_state.py  redaction.py  trace_context.py  trace_logging.py
app/routers/: __init__.py  task_router.py  webhook_router.py
app/scheduler/: __init__.py  cron_scheduler.py  file_cleanup_task.py  system_scheduler.py
app/security/: whitelist.py
app/services/: __init__.py  agent_service.py  agentcore_browser_replay_service.py  artifact_service.py  command_parser.py  conversation_manager_agent.py  conversation_service.py  cron_service.py  file_service.py  logging_service.py  memory_extraction_service.py  memory_service.py  onboarding_service.py  pending_skill_service.py  personality_service.py  runtime_env_service.py  skill_service.py  task_service.py  webhook_service.py
app/sqs/: __init__.py  message_processor.py  queue_manager.py  typing_indicator.py
app/telegram/: __init__.py  approval_handler.py  bot.py  command_executor.py  message_handlers.py  message_queue.py  message_sender.py  models.py  response_formatter.py
app/tools/: __init__.py  browser_session_tracker.py  browser_tool.py  conversation_summary_vault.py  credential_tool.py  cron_tools.py  download_skill.py  file_read_env.py  file_write_env.py  forget_memory.py  mcp_manager.py  onboard_pending_skills.py  personality_vault.py  remember_memory.py  run_in_background.py  search_memory.py  send_file.py  send_progress.py  set_agent_name.py  shell_env.py  short_term_memory_vault.py  skill_secrets.py
docs/: API.md  memory.md
instructions/: README.md  id.md  soul.md
scratchpad/: .gitkeep
tests/: __init__.py  conftest.py
tests/docker/: __init__.py  conftest.py  test_docker_binaries_pbt.py  (+2 more)
(+177 files in other folders)
