[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mordecai"
version = "0.1.0"
description = "Mordecai — multi-user AI agent platform with Telegram interface"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
authors = [
    {name = "Mordecai Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "aiosqlite>=0.19.0",
    "nest-asyncio>=1.6.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-telegram-bot>=20.7",
    "boto3>=1.34.0",
    "strands-agents[gemini]>=0.1.0",
    "strands-agents-tools>=0.1.0",
    "alembic>=1.13.0",
    "botocore[crt]>=1.42.36",
    "bedrock-agentcore[strands-agents]>=0.1.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "openai>=2.16.0",
    "croniter>=2.0.0",
    # PDF support for file attachments
    "pypdf>=4.0.0",
    "pdfplumber>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.92.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
mordecai = "app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short -s --log-cli-level=INFO"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "integration: marks tests as integration tests (may require network)",
    "e2e: marks tests as end-to-end tests (require real credentials)",
    "slow: marks tests as slow (may incur API costs)",
]

[tool.ruff]
target-version = "py313"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "telegram.*",
    "boto3.*",
    "botocore.*",
    "strands.*",
]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "hypothesis>=6.151.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
